--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
     
     .center {
     text-align: center;
+    font-family: 'Pacifico',cursive;
     }
     a {
     color:#636363;
@@ -184,3 +185,8 @@ body {
     outline: none;
     color:#fff;
     }
+
+    @font-face{
+        font-family: 'Pacifico', cursive;
+        src: url("https://fonts.googleapis.com/css?family=Pacifico") 
+      }
