--- a/client/src/index.css
+++ b/client/src/index.css
@@ -277,6 +277,7 @@ body {
     font-size:40px;
     text-align:center;
     justify-content: center;
+    font-family: 'Pacifico', cursive;
     }
 
   /* .post-container {
