--- a/client/src/index.css
+++ b/client/src/index.css
@@ -165,6 +165,7 @@ body {
 
   .post {
     height:100%;
+    padding: 0 5%;
     background:white;
     display: inline-block;
     justify-content: center;
